--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -103,3 +103,51 @@ validateValues(data.tibble, stSchema)
 # Some details
 
 ## The S4 class `StfwfSchema` 
+An ideal situation for official statistical production and dissemination would be to have a standard for the construction and dissemination of fixed-width microdata file schemas. Our proposal is still far from being a standard since more information should be provided (e.g. reference metadata of the survey whose microdata are being disseminated). In this line of thought, the schema implemented in this package contains the core information as a simple object with just one attribute as a data matrix with the aforementioned columns. This class can be further developed to include more attributes.
+
+As constructors we have defined two functions to read the schema details from an xlsx or csv file. Since some columns are redundant, it is not necessary to provide all of them:
+
+```{r, echo = TRUE, cache = TRUE, eval = TRUE}
+library(fastReadfwf)
+library(openxlsx)
+
+# Only variable names, widths and types are provided
+xlsx.df <- data.frame(variable = paste0('var', 1:3),
+                      width = c(10, 2, 4),
+                      initialPos = NA,
+                      finalPos = NA,
+                      type = c('char', 'num', 'char'),
+                      valueRegEx = '',
+                      description = '')
+write.xlsx(xlsx.df, 'exampleSchema.xlsx', sheetName = 'stSchema', colNames = TRUE)
+xlsxToSchema('exampleSchema.xlsx', 'stSchema')
+```
+
+We have defined *getters* for this class:
+
+```{r, echo = TRUE, cache = TRUE, eval = TRUE}
+library(fastReadfwf)
+path <- system.file('extdata', package = 'fastReadfwf')
+stSchema <- csvToSchema(file.path(path, 'SchemaSNHS.csv'))
+
+# Get the slot df
+head(getdf(stSchema))
+
+# Get variables
+head(getVariables(stSchema))
+
+# Get widths
+head(getWidths(stSchema))
+
+# Get initial position
+head(getinitialPos(stSchema))
+
+# Get final position
+head(getfinalPos(stSchema))
+
+# Get types
+head(getTypes(stSchema))
+
+# Get regex
+head(getRegEx(stSchema))
+```
