--- a/vignettes/Intro.Rmd
+++ b/vignettes/Intro.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Fast reading fwf}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -90,12 +90,12 @@ str(stSchema)
 
 ## `data.table` format
 
-Producing a data.table is now straightforward and fairly fast. The function `xlsxToSchema()` is used to load the schema object. Then, the function `fread_fwf()` is used to read the file with that schema.
+Producing a data.table is now straightforward and fairly fast. The function `StxlsxToSchema()` is used to load the schema object. Then, the function `fread_fwf()` is used to read the file with that schema.
 
 ```{r readDT, echo = TRUE, eval = TRUE, cache = TRUE, dependson= 'Origxlsx'}
 library(fastReadfwf)
 library(data.table)
-stSchema <- xlsxToSchema(file.path(path, 'SchemaSNHS.xlsx'), 'stSchema')
+stSchema <- StxlsxToSchema(file.path(path, 'SchemaSNHS.xlsx'), 'stSchema')
 system.time(
   data.DT <- fread_fwf(file.path(path, 'MicroDataSNHS.txt'), 
                        stSchema, outFormat = 'data.table', convert = FALSE, perl = TRUE)
@@ -144,7 +144,7 @@ In the case of tibbles, we proceed in the same way:
 ```{r readTibble, echo = TRUE, eval = TRUE, cache = TRUE, dependson= 'Origxlsx'}
 library(fastReadfwf)
 library(tibble)
-stSchema <- xlsxToSchema(file.path(path, 'SchemaSNHS.xlsx'), 'stSchema')
+stSchema <- StxlsxToSchema(file.path(path, 'SchemaSNHS.xlsx'), 'stSchema')
 system.time(
   data.tibble <- fread_fwf(file.path(path, 'MicroDataSNHS.txt'), 
                        stSchema, outFormat = 'tibble', convert = FALSE)
@@ -179,7 +179,7 @@ xlsx.df <- data.frame(variable = paste0('var', 1:3),
                       valueRegEx = '',
                       description = '')
 write.xlsx(xlsx.df, 'exampleSchema.xlsx', sheetName = 'stSchema', colNames = TRUE)
-xlsxToSchema('exampleSchema.xlsx', 'stSchema')
+StxlsxToSchema('exampleSchema.xlsx', 'stSchema')
 ```
 
 We have defined *getters* for this class:
@@ -187,7 +187,7 @@ We have defined *getters* for this class:
 ```{r, echo = TRUE, cache = FALSE, eval = TRUE}
 library(fastReadfwf)
 path <- system.file('extdata', package = 'fastReadfwf')
-stSchema <- csvToSchema(file.path(path, 'SchemaSNHS_microdataWeb.csv'))
+stSchema <- StcsvToSchema(file.path(path, 'SchemaSNHS_microdataWeb.csv'))
 
 # Get the slot df
 head(getdf(stSchema))
